<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Say it!</string>
    <string name="about">About</string>
    <string name="info">Reference</string>
    <string name="legend">Simple app, which transforms text to speech using speech synthesis by Google.\n
        If you have no speech synthesis, this app will make a notification about it. You can download speech synthesis
        in Google Play.\nCurrently this app supports only Russian language.\n"Salty" - it\'s the language from
        childhood, it consists of using russian sound "s" after every vowel with this vowel. This mode applicable for
        Russian keyboard only.</string>
    <string name="about_text">This app has no any meaning. It was made for educational purposes and for fun.\n
        © Denis Korobkov, 2015</string>
    <string name="example">Съешь ещё 23% этих мягких французских булок, да выпей же 18645 чашек чаю</string>
    <string name="radioR">Russian</string>
    <string name="radioS">\"Salty\"</string>
    <string name="buttonEx">Examples</string>
    <string name="buttonCl">Clear</string>
    <string name="buttonSay">Say it!</string>
    <string name="onLoadWait">Starting app. Please wait…</string>
    <string name="initFail">TTS Initialization Failed :(\nPlease install speech synthesis by Google and turn it on.</string>
    <string name="saltyConvert">One moment, please…</string>
    <string name="dialogCloseBtn">Close</string>
    <string name="settings">Settings</string>
    <string name="ext_settings">Exterior settings</string>
    <string name="bg_settings">Background</string>
    <string name="bg_settings_summary">Choose the background</string>
    <string name="btn_settings">Buttons</string>
    <string name="btn_settings_summary">Choose the style of buttons</string>
</resources>