<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    android:id="@+id/main_lo"
    android:background="@drawable/bg_b"
    style="@android:style/Theme.Holo.Light">

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:id="@+id/editText" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonSay"
            android:id="@+id/button"
        android:textSize="20dp"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentRight="true"
        style="@style/ButtonTheme"
        android:textColor="@color/btn_text_color"
        android:textStyle="italic" />
    <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
        android:layout_alignWithParentIfMissing="false"
        android:visibility="visible"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:id="@+id/radioGroup">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioR"
                android:id="@+id/radioRUS" android:textSize="15dp" android:layout_gravity="center"
            android:enabled="true"
            android:checked="true"
            android:textColor="#000000" />
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioS"
                android:id="@+id/radioSALT" android:textSize="15dp" android:layout_gravity="right"
            android:textColor="#000000" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="KorobkovD"
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonEx"
        android:id="@+id/buttonExamples"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="true" android:textSize="20dp"
        style="@style/ButtonTheme"
        android:textColor="@color/btn_text_color"
        android:textStyle="italic" />

    <Button
        style="@style/CButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/buttonCl"
        android:id="@+id/buttonClear"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6.5dp" />
</RelativeLayout>